完成1.12.2版本，并修复1.12.2网络名长度限制